src/routes/policy/styles.module.scss
.screen {
	padding: 2rem;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.content {
	max-width: 1000px;
	width: 100%;
	padding-block: 5rem 1rem;
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
}

.header {
	display: flex;
	justify-content: space-between;
}

.title {
	font-family: "Roboto", sans-serif;
	font-size: 2.5em;
	font-weight: 600;
}

.date {
	font-size: 1.2em;
	font-family: "Roboto", sans-serif;
	font-weight: 500;
	line-height: 1.6;
}

.fields {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.field {
	line-height: 1.6;
	font-family: "Roboto";
	font-weight: 400;
	font-size: 1.1em;
}

.dot {
	margin-right: .5em;
	font-family: "Roboto", sans-serif;
	vertical-align: sub;
	font-size: 1.5em;
}

